[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NodePy"
version = "1.1.0"
description = "A Godot-inspired 2D game engine built in Python and tkinter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/OneTrain2005/NodePy"
